# synth

./: .gitignore  .gitmodules  .prettierrc  .py  CMakeLists.txt  README.md  TODO.txt  electron.vite.config.ts  envelope.test.py  index.html  index.js  main.cpp  main.js  main.py  oscillator.test.py  package-lock.json  package.json  renderer.js  svelte.config.mjs  synth.py  tsconfig.json
addons/core/: CMakeLists.txt
addons/core/include/: AmplifierModule.hpp  Module.hpp  OscillatorModule.hpp  OutRackModule.hpp  Port.hpp  Rack.hpp  thread_safe_ptr.hpp
addons/core/include/modules/: AmplifierModule.hpp  EnvelopeModule.hpp  FilterModule.hpp  FromDeviceModule.hpp  MixerModule.hpp  Module.hpp  OscillatorModule.hpp  ToDeviceModule.hpp
addons/core/src/: Core.cpp  EnvelopeModule.cpp  Module.cpp  OscillatorModule.cpp  Rack.cpp  ToDeviceModule.cpp
addons/core/src/modules/: AmplifierModule.cpp  EnvelopeModule.cpp  FilterModule.cpp  FromDeviceModule.cpp  MixerModule.cpp  Module.cpp  OscillatorModule.cpp  ToDeviceModule.cpp
apollo/: .clang-format  TODO  cpp-notes.txt  memo.txt  useful-links
apollo/include/: OscillatorModule.hpp
apollo/src/: AbtractModule.cpp  OscillatorModule.cpp
core/: .clang-format  core.cpp
core/include/: AmplifierModule.h  AmplifierModule.hpp  EnvelopeModule.h  EnvelopeModule.hpp  FilterModule.h  FilterModule.hpp  MixerModule.h  MixerModule.hpp  Module.h  Module.hpp  OscillatorModule.h  OscillatorModule.hpp  RCU.h  RCU.hpp  Rack.h  Rack.hpp
core/src/: AmplifierModule.cpp  FilterModule.cpp  (+5 more)
include/: AbstractModule.hpp  AmplifierModule.hpp  EnvelopeModule.h  EnvelopeModule.hpp  FilterModule.hpp  MixerModule.hpp  Module.hpp  OscillatorModule.hpp
modules/: ADSR.py  ARP.py  LFO.py  MIDI.py  VCA.py  VCF.py  VCO.py  amplifier.py  arpeggiator.py  envelope.py  envelope.test.py  filter.py  mixer.py  modulator.py  module.py  oscillator.py
resources/: core.node
src/: AmplifierModule.cpp  EnvelopeModule.cpp  FilterModule.cpp  MixerModule.cpp  Module.cpp  OscillatorModule.cpp
src-react/: App.tsx  main.tsx
ui/: renderer.js
(+43 files in other folders)
